<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:id="@+id/titre"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center"
            android:text="@string/title_activity_medical_check_creation"
            android:textStyle="bold"
            android:textColor="#006699"
            android:textSize="20sp"/>

        <TableRow>
            <TextView
                android:text="@string/taille"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/tailleInput"
                android:hint="@string/tailleInput"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/poids"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/poidsInput"
                android:hint="@string/poidsInput"
                android:inputType="number"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/mna"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/mnaInput"
                android:hint="@string/mnaInput"
                android:inputType="number"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/albuminemie"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/albuminemieInput"
                android:hint="@string/albuminemieInput"
                android:inputType="number"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/crp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/crpInput"
                android:hint="@string/crpInput"
                android:inputType="number"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/vitd"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/vitdInput"
                android:hint="@string/vitdInput"
                android:inputType="number"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/diagnostic"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/diagnosticInput"
                android:hint="@string/diagnosticInput"/>
        </TableRow>

        <TableRow>
            <LinearLayout
                android:paddingTop="15dp"
                android:layout_span="2"
                android:gravity="center">
                <Button
                    android:id="@+id/retourMedCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retour"/>
                <Button
                    android:id="@+id/raz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/raz"/>
                <Button
                    android:id="@+id/sendMedCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</ScrollView>