<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:id="@+id/titre"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center"
            android:text="@string/title_activity_create_account_third_part"
            android:textStyle="bold"
            android:textColor="#006699"
            android:textSize="20sp"/>

        <TableRow>
            <TextView
                android:id="@+id/gender"
                android:paddingTop="10dp"
                android:text="@string/gender"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <RadioGroup
                android:id="@+id/genderChoice"
                android:paddingTop="10dp"
                android:orientation="vertical"
                android:checkedButton="@+id/male">
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/male"/>
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/female"/>
            </RadioGroup>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/status"
                android:paddingTop="10dp"
                android:text="@string/status"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <RadioGroup
                android:id="@+id/statusChoice"
                android:paddingTop="10dp"
                android:orientation="vertical"
                android:checkedButton="@+id/married">
                <RadioButton
                    android:id="@+id/married"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/married"/>
                <RadioButton
                    android:id="@+id/single"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/single"
                    android:paddingRight="5dp"/>
                <RadioButton
                    android:id="@+id/veuf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/veuf"
                    android:paddingRight="5dp"/>
                <RadioButton
                    android:id="@+id/divorced"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/divorced"
                    android:paddingRight="5dp"/>
                <RadioButton
                    android:id="@+id/partner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/partner"
                    android:paddingRight="5dp"/>
            </RadioGroup>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/residency"
                android:paddingTop="10dp"
                android:text="@string/residency"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <RadioGroup
                android:id="@+id/residencyChoice"
                android:paddingTop="10dp"
                android:orientation="vertical"
                android:checkedButton="@+id/pavillon">
                <RadioButton
                    android:id="@+id/pavillon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/pavillon"/>
                <RadioButton
                    android:id="@+id/apartment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/apartment"/>
                <RadioButton
                    android:id="@+id/foyer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/foyer"
                    android:checked="false" />
                <RadioButton
                    android:id="@+id/rpa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/rpa"/>
                <RadioButton
                    android:id="@+id/ehpad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/ehpad"/>
                <RadioButton
                    android:id="@+id/adoma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/adoma"/>
            </RadioGroup>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/financial"
                android:paddingTop="10dp"
                android:text="@string/financial"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <RadioGroup
                android:id="@+id/financialChoice"
                android:paddingTop="10dp"
                android:orientation="vertical"
                android:checkedButton="@+id/ouifinancier">
                <RadioButton
                    android:id="@+id/ouifinancier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/ouifinancier"/>
                <RadioButton
                    android:id="@+id/nonfinancier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/nonfinancier"/>
            </RadioGroup>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/domicile"
                android:paddingTop="10dp"
                android:text="@string/domicileHelp"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <RadioGroup
                android:id="@+id/domicileChoice"
                android:paddingTop="10dp"
                android:orientation="vertical"
                android:checkedButton="@+id/ouidomicile">
                <RadioButton
                    android:id="@+id/ouidomicile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/ouidomicile"/>
                <RadioButton
                    android:id="@+id/nondomicile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/nondomicile"/>
            </RadioGroup>
        </TableRow>

        <TableRow>
            <LinearLayout
                android:layout_span="2"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/retourCreation3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retour"/>
                <Button
                    android:id="@+id/nextCreation3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suivant"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</ScrollView>